--- a/projeto-glass-html5/_css/estilo.css
+++ b/projeto-glass-html5/_css/estilo.css
@@ -13,6 +13,10 @@ body {
 	/*background-color: #dddddd;
 	color: rgba(0,0,0,1);*/
 }
+.nano { background: #bba; width: 500px; height: 500px; }
+.nano .nano-content { padding: 10px; }
+.nano .nano-pane   { background: #888; }
+.nano .nano-slider { background: #111; }
 
 div#interface {
 	width: 900px;
