--- a/Shopp/css/login.css
+++ b/Shopp/css/login.css
@@ -29,6 +29,20 @@ button {
     border: none;
     cursor: pointer;  
 }
+button.btnlogcont{
+    margin: 0 15px;
+    font-family: 'Righteous', cursive;
+    margin: 0;
+    background-color: #3f169d;
+    color: white;
+    padding: 11px;
+  text-decoration: none;
+  font-size: 15px; 
+  line-height: 28px;
+  border-radius: 4px;
+    border: none;
+    cursor: pointer;  
+}
 
 /* Estilos extras para o botão de cancelamento */
 .cancelbtn {
