--- a/Shopp/css/login.css
+++ b/Shopp/css/login.css
@@ -1,7 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Righteous');
-
-body { font-family: "PT Sans", sans-serif;
-    margin: 0;}
+@import url('https://fonts.googleapis.com/css?family=Audiowide|Orbitron|Press+Start+2P');
+body {font-family: 'Patua One', cursive;
+margin: 0;}
 
 /* Campos de entrada de largura total */
 input[type=text], input[type=password] {
@@ -16,32 +15,17 @@ input[type=text], input[type=password] {
 /* 
 Definir um estilo para todos os botões da tela login */
 button {
-    margin: 0 15px;
-    font-family: 'Righteous', cursive;
-    margin: 0;
-    background-color: #4CAF50;
-    color: white;
-    padding: 11px;
-  text-decoration: none;
-  font-size: 15px; 
-  line-height: 28px;
-  border-radius: 4px;
-    border: none;
-    cursor: pointer;  
-}
-button.btnlogcont{
-    margin: 0 15px;
-    font-family: 'Righteous', cursive;
-    margin: 0;
-    background-color: #3f169d;
-    color: white;
-    padding: 11px;
-  text-decoration: none;
-  font-size: 15px; 
-  line-height: 28px;
-  border-radius: 4px;
-    border: none;
-    cursor: pointer;  
+   font-family: 'Audiowide', cursive;
+   margin: 0;
+   background-color: #59656F;
+   color: white;
+   padding: 10px;
+   text-decoration: none;
+   font-size: 14px; 
+   line-height: 26.9px;
+   border-radius: 4px;
+   border: none;
+   cursor: pointer;  
 }
 
 /* Estilos extras para o botão de cancelamento */
@@ -109,7 +93,7 @@ span.psw {
     from {-webkit-transform: scale(0)} 
     to {-webkit-transform: scale(1)}
 }
-    
+
 @keyframes animatezoom {
     from {transform: scale(0)} 
     to {transform: scale(1)}
@@ -118,10 +102,10 @@ span.psw {
 /* Alterar estilos para span e cancelar botão em telas extras pequenas */
 @media screen and (max-width: 300px) {
     span.psw {
-       display: block;
-       float: none;
-    }
-    .cancelbtn {
-       width: 100%;
-    }
+     display: block;
+     float: none;
+ }
+ .cancelbtn {
+     width: 100%;
+ }
 }
