--- a/css/estilo.css
+++ b/css/estilo.css
@@ -20,7 +20,7 @@ html * {
 body {
   animation: anim 8s infinite;
   font-size: 100%;
-  font-family: ;
+  font-family: "Agency FB", cursive;
   color: #31353d;
   
 }
@@ -314,22 +314,40 @@ header {
     /*---efeito de pisca pisca (basta chamar usando o (animation: anim 8s infinite;)---*/
     @keyframes anim {
       0% {
-        background: #2E5266;
+        background: #500ac1;
       }
-      20% {
-        background: #6E8898;
+      9% {
+        background: #492996;
       }
-      40% {
-        background: #9FB1BC;
+      18% {
+        background: #4b80f5;
       }
-      60% {
-        background: #D3D0CB;
+      27% {
+        background: #4c9bca;
       }
-      80% {
-        background: #E2C044;
+      36% {
+        background: #4dd1de;
       }
-      100% {
-        background: #0CA98A;
+      45% {
+        background: #00e8ff;
+      }
+      54%{
+        background:#45c1c7;
+      }
+      63%{
+        background:#4c9bca;
+      }
+      72%{
+        background:#4b80f5;
+      }
+      81%{
+        background:#874eef;
+      }
+      90% {
+        background: #7b33ef;
+      }
+      100%{
+        background: #500ac1;
       }
     }
     /*------Fim Efeito Rodapé Pisca Pisca-----*/
