--- a/css/estilo.css
+++ b/css/estilo.css
@@ -35,7 +35,8 @@ img {
 }
 
 h1#Home {
-  background-color: white;
+  color: #fff;
+  background-color: #302B27;
   font-size: 25px;
   margin-top: 0px;
   text-align: center;
@@ -209,8 +210,10 @@ header {
     position: absolute;
     height: auto;
     width: auto;
-    left: auto;
-    right: 1em;
+    left: 0;
+    right: 0;
+    /*left: auto;
+    right: 1em;*/
     padding-top: 0;
     top: 0;
     background: transparent;
@@ -238,7 +241,7 @@ header {
     color: #FFF;
   }
   .no-touch #main-nav ul a:hover {
-    background: #DEBA6F;
+    background: #F2AF29;
     color: #FFF;
     transition: 1.5s;
 
@@ -259,7 +262,8 @@ header {
       padding-top: 110px;
       padding-bottom: 100px;
       text-align: center;
-      background: url(../img/back.jpg) bottom;
+      background: #F2AF29;
+      /*background: url(../img/back.jpg) bottom;*/
       background-size: cover;
       background-attachment: fixed;
       width: 100%;
@@ -277,9 +281,9 @@ header {
     .row {  
       background: #fff;
       color: #aaa;
-      width: 1000px;
+      width: 1100px;
       max-width: 84%;
-      margin: 10% auto;
+      margin: 6% auto;
       padding: 5%;
       border-radius: 4px;
       
