--- a/css/estilo.css
+++ b/css/estilo.css
@@ -36,7 +36,7 @@ img {
 
 h1#Home {
   color: #fff;
-  background-color: #302B27;
+  background-color: #31353d;
   font-size: 25px;
   margin-top: 0px;
   text-align: center;
