--- a/css/orbita.css
+++ b/css/orbita.css
@@ -1,35 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Audiowide|Fugaz+One|Orbitron|Titan+One');
-html {
-	font-size: 69.5%;
-	width: 100%;
-	height: 100%;
-}
-
-body{
-
-	font-family: 'Fugaz One', cursive;
-	margin: 0;
-	padding: 0;
-	height: 100%;
-	font-size: 1.4rem;
-}
-
-
-
-.header {
-	width: 100%;
-	height: 2rem;
-	padding: 3rem 0;
-	display: block;
-}
-
 
 
 
 /*---------------*/
-
-
-
 
 .ellipse-container {
 	width: 50rem;
@@ -37,19 +10,20 @@ body{
 	border-radius: 50%;
 	margin: 0 auto;
 	position: relative;
-	top: -1rem;
+	top: 0rem;
 }
 
 .ellipse-container .greeting {
+	color: #fff;
 	position: relative;
 	top: 20rem;
-	left: 2rem;
+	left: 1.9rem;
 	right: 0;
 	margin: 0 auto;
 	text-transform: uppercase;
 	letter-spacing: 4rem;
-	font-size: 5rem;
-	font-weight: 400;
+	font-size: 4.4rem;
+	font-weight: 600;
 	
 }
 
@@ -59,7 +33,7 @@ body{
 	height: .3rem;
 	border-radius: 50%;
 	display: inline-block;
-	background-color: #0C383E;
+	background-color: #395284;
 	position: relative;
 	top: -0.65rem;
 	left: -5.05rem;
@@ -97,7 +71,7 @@ body{
 .ellipse__outer--thick {
 	width: 99.5%;
 	height: 99.5%;
-	border-color: #09383E transparent;
+	border-color: #fff transparent;
 	border-width: 2px;
 	transform: rotate(-45deg);
 	animation: ellipseRotate 15s ease-in-out infinite;
@@ -107,7 +81,7 @@ body{
 	width: 2.5rem;
 	height: 2.5rem;
 	border-width: 2px;
-	border-color: #09383E;
+	border-color: #fff;
 	top: 5rem;
 	right: 6.75rem;
 }
@@ -118,7 +92,7 @@ body{
 	height: 0.7rem;
 	border-radius: 50%;
 	display: inline-block;
-	background-color: #09383E;
+	background-color: #fff;
 	margin: 0 auto;
 	left: 0;
 	right: 0;
