--- a/css/passeio.css
+++ b/css/passeio.css
@@ -3,6 +3,9 @@
 /* -------------------------------- 
 Estilo principal
 -------------------------------- */
+html{
+  font-size: 70%;
+}
 html * {
   margin: 0;
   padding: 0;
@@ -18,9 +21,9 @@ html * {
 }
 
 body {
-  font-family: 'Audiowide', cursive;
+  background: #395284;
   font-size: 100%;
-  font-family: ;
+  font-family: "Audiowide";
   color: #31353d;
   height: 100%;
   
@@ -198,7 +201,8 @@ header {
   left: 0;
 }
 #main-nav ul a {
- font-family: 'Audiowide', cursive;
+  font-size: 18px;
+  font-family: 'Audiowide', cursive;
  display: block;
  height: 50px;
  line-height: 50px;
@@ -230,7 +234,7 @@ header {
   }
   #main-nav li {
     display: inline-block;
-    margin-left: 1em;
+     margin-left: 0em;
   }
   #main-nav ul a {
     display: inline-block;
@@ -247,7 +251,7 @@ header {
     color: #FFF;
   }
   .no-touch #main-nav ul a:hover {
-    background: #F2AF29;
+    background: #395284;
     color: #FFF;
     transition: 1.5s;
 
@@ -278,9 +282,9 @@ header {
   background-repeat: no-repeat;
   position: relative;
   padding-top: 110px;
-  padding-bottom: 100px;
+  padding-bottom: 60px;
   text-align: center;
-  background: #F2AF29;
+  background: #ffc554;
   /*background: url(../img/back.jpg) bottom;*/
   background-size: cover;
   background-attachment: fixed;
@@ -296,7 +300,7 @@ header {
 
 .container-slider {
   width: 900px;
-  margin: 40px auto 0;
+  margin: 20px auto 0;
 }
 
 .slider-wrapper {
