--- a/css/estilo.css
+++ b/css/estilo.css
@@ -10,11 +10,11 @@ html{
   font-size: 70%;
 }
 html * {
- margin: 0;
- padding: 0;
- -webkit-font-smoothing: antialiased;
- -moz-osx-font-smoothing: grayscale;
- box-sizing: border-box;
+   margin: 0;
+  padding: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
 
 *, *:after, *:before {
@@ -25,7 +25,7 @@ html * {
 
 body {
   background: #395284;
-  font-family: "Audiowide";
+  font-family: "Audiowide", cursive;
   font-size: 100%;
   color: #31353d;
   
@@ -38,33 +38,33 @@ a {
 
 /*img {
   max-width: 100%;
-  }*/
+}*/
 
-  h1#Home {
-    color: #fff;
-    background-color: #31353d;
-    font-size: 25px;
-    margin-top: 0px;
-    text-align: center;
-  }
+h1#Home {
+  color: #fff;
+  background-color: #31353d;
+  font-size: 25px;
+  margin-top: 0;
+  text-align: center;
+}
 
-  .main-conteudo h2{
-    text-align: center;
-    border-bottom: 2px solid black;
-  }
-  /*Efeito Hover Cool Link*/
-  .cool-link::after {
-    content: '';
-    display: block;
-    width: 0;
-    height: 2px;
-    background: #fff;
-    transition: width 1s;
-  }
-  .cool-link:hover::after {
-    width: 100%;
-    transition: width 1s;
-  }
+.main-conteudo h2{
+  text-align: center;
+  border-bottom: 2px solid black;
+}
+/*Efeito Hover Cool Link*/
+.cool-link::after {
+  content: '';
+  display: block;
+  width: 0;
+  height: 2px;
+  background: #fff;
+  transition: width 1s;
+}
+.cool-link:hover::after {
+  width: 100%;
+  transition: width 1s;
+}
 
 
 /* -------------------------------- 
@@ -199,13 +199,13 @@ header {
   left: 0;
 }
 #main-nav ul a {
-  font-size: 18px;
-  font-family: 'Audiowide', cursive;
-  display: block;
-  height: 50px;
-  line-height: 50px;
-  padding: 0 1em;
-
+font-size: 18px;
+ font-family: 'Audiowide', cursive;
+ display: block;
+ height: 50px;
+ line-height: 50px;
+ padding: 0 1em;
+ 
 }
 #main-nav ul .current {
   box-shadow: inset 3px 0 #435779;
@@ -233,7 +233,7 @@ header {
   #main-nav li {
     display: inline-block;
     /*margin-left: 1em;*/
-    margin-left: 0em;
+    margin-left: 0;
   }
   #main-nav ul a {
     display: inline-block;
@@ -262,198 +262,88 @@ header {
 
 
 /*-------------
-    Background-body
+    Background-header
     ---------------*/
 
-    body .background {
-     background: #970c23 center fixed;
-     display: flex;
-     flex-direction: column;
-     justify-content: space-around;
-     line-height: 1;
-     position: relative;
-     padding-top: 120px;
-     padding-bottom: 60px;
-     text-align: center;
-     width: 100%;
-     height: auto;
-
-   }
-
-   .background::before {
-    background: repeating-linear-gradient(
-      transparent,
-      transparent 2em,
-      rgba(45,25,25,0.3) 2em,
-      rgba(45,25,25,0.3) 2.5em,
-      transparent 2.5em,
-      transparent 4.5em,
-      rgba(45,25,25,0.3) 4.5em,
-      rgba(45,25,25,0.3) 6.5em,
-      transparent 6.5em,
-      transparent 7em,
-      rgba(45,25,25,0.3) 7em,
-      rgba(45,25,25,0.3) 9em
-      );
-    content: '';
-    bottom: 0;
-    top: 0;
-    left: 0;
-    right: 0;
-    position: absolute;
-  }
-  .background::after {
-    background: repeating-linear-gradient( 90deg,
-      transparent,
-      transparent 2em,
-      rgba(45,25,25,0.3) 2em,
-      rgba(45,25,25,0.3) 2.5em,
-      transparent 2.5em,
-      transparent 4.5em,
-      rgba(45,25,25,0.3) 4.5em,
-      rgba(45,25,25,0.3) 6.5em,
-      transparent 6.5em,
-      transparent 7em,
-      rgba(45,25,25,0.3) 7em,
-      rgba(45,25,25,0.3) 9em
-      );
-    content: '';
-    bottom: 0;
-    top: 0;
-    left: 0;
-    right: 0;
-    position: absolute;
-  }
-
-  /* Column container */
-
-
-  .row {  
-    background: #fff;
-    color: #aaa;
-    width: 1200px;
-    max-width: 90%;
-    margin: 5.5% auto;
-    margin-top: -1%;
-    padding: 4%;
-    border-radius: 6px;
-    padding-top: 1%;
-    padding-bottom: 1%;
-    box-shadow: 0px 0px 10px rgba(0,0,0,1);
-
-  }
-
-
-  /* Main column */
-  .main-conteudo { 
-    color: #fff;
-    margin: 4% auto;
-    font-size: 18px;
-    border-radius: 6px;
-    -ms-flex: 70%; /* IE10 */
-    flex: 70%;
-    background-color: #ffc554;
-    padding: 30px;
-    box-shadow: 0px 0px 10px rgba(0,0,0,1); 
-  }
-
-  /* Fake imagem, just for this example */
-  .fakeimg {
-    background-color: grey;
-    width: 100%;
-    padding: 20px;
-  }
-
-  /* Footer */
-  .footer {
-    font-size: 20px;
-    color: white;
-    background: #31353d;
-    padding: 90px;
-    text-align: center;
-
-  }
-
-
-  /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
-  @media screen and (max-width: 700px) {
-    .row {   
-      flex-direction: column;
-    }
-  }
-
-  /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
-  @media screen and (max-width: 400px) {
-    .navbar a {
-      float: none;
+    .background {
+      position: relative;
+      padding-top: 110px;
+      padding-bottom: 60px;
+      text-align: center;
+      /*background: url(../img/back.jpg) bottom;*/
+      background-size: cover;
+      background: #ff852b no-repeat fixed bottom;
       width: 100%;
+      height: auto;
+
     }
-  }
+
+    /*-----------
 
 
-  /* teste botao roupa */
+    --------------*/
+    /* Column container */
+    
 
-  .button {
-   font-size: 100% center;
-   margin-left: 47%;
-   background: #4d6b61;
-   border: 0;
-   border-radius: 50%;
-   box-shadow: inset -0.125rem -0.25rem rgba(0,0,0,0.2),
-   inset 0.125rem 0.25rem rgba(255,255,255,0.2),
-   0.125rem 0.25rem 0.25rem rgba(0,0,0,0.35);
-   color: #4d6b61;
-   display: inline-block;
-   letter-spacing: 0.38em;
-   text-transform: uppercase;
-   text-decoration: none;
-   text-shadow: 1px 1px 1px rgba(0,0,0,.6), -1px -1px 1px rgba(255,255,255,0.4);
-   height: 8rem;
-   width: 8rem;
-   position: relative;
-   z-index: 1;
- }
+    .row {  
+      background: #fff;
+      color: #aaa;
+      width: 1100px;
+      max-width: 90%;
+      margin: 5% auto;
+      border-radius: 6px;
+      padding: 1% 4%;
 
- .button::before {
-  content: '';
-  border-radius: 50%;
-  box-shadow: inset -0.0625rem -0.125rem rgba(255,255,255,0.2),
-  inset 0.0625rem 0.125rem rgba(0,0,0,0.2);
-  position: absolute;
-  top: 1rem;
-  left: 1rem;
-  height: 6rem;
-  width: 6rem;
-}
+    }
 
-.button::after {
-  content: '';
-  border-radius: 50%;
-  box-shadow: 2.45rem 2.45rem #462227,
-  2.45rem 4.45rem #462227,
-  4.45rem 2.45rem #462227,
-  4.45rem 4.45rem #462227,
-  2.55rem 2.55rem rgba(255,255,255,0.2),
-  2.55rem 4.55rem rgba(255,255,255,0.2),
-  4.55rem 2.55rem rgba(255,255,255,0.2),
-  4.55rem 4.55rem rgba(255,255,255,0.2),
-  2.35rem 2.35rem rgba(0,0,0,0.2),
-  2.35rem 4.35rem rgba(0,0,0,0.2),
-  4.35rem 2.35rem rgba(0,0,0,0.2),
-  4.35rem 4.35rem rgba(0,0,0,0.2);
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 1rem;
-  width: 1rem;
-}
+    
+    /* Main column */
+    .main-conteudo { 
+      color: #fff;
+      margin: 4% auto;
+      font-size: 18px;
+     border-radius: 6px;
+      -ms-flex: 70%; /* IE10 */
+      flex: 70%;
+      background-color: #ffc554;
+      padding: 30px;
+    }
 
-.button:focus {
-  background: #56796d;
-  outline:0;
-}
+    /* Fake image, just for this example */
+    .fakeimg {
+      background-color: grey;
+      width: 100%;
+      padding: 20px;
+    }
 
-.button:active {
-  transform: scale(0.98,0.98);
-}
+    /* Footer */
+    .footer {
+      font-size: 20px;
+      color: white;
+      background: #31353d;
+      padding: 90px;
+      text-align: center;
+      
+    }
+
+
+    /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
+    @media screen and (max-width: 700px) {
+      .row {   
+        flex-direction: column;
+      }
+    }
+
+    /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
+    @media screen and (max-width: 400px) {
+      .navbar a {
+        float: none;
+        width: 100%;
+      }
+    }
+
+
+
+
+
 
