--- a/login/css/style.css
+++ b/login/css/style.css
@@ -3,74 +3,32 @@ flex-box, body {
   align-items: center;
   justify-content: center;
 }
+html{
+  height: 100%;
+  width: 100%;
+}
 /*-------------
     Background-body
     ---------------*/
-
+  header{
+    position: relative;
+    width: 100%;
+    height: 70px;
+    background: none;
+  }
     body {
-     background: #970c23;
+     background-image: linear-gradient(to top, rgb(58, 213, 255) 0%, rgb(0, 91, 234) 100%);
      display: flex;
      flex-direction: column;
      justify-content: space-around;
      align-items: center;
-     line-height: 1;
+     line-height: 0;
      position: relative;
-     padding-top: 80px;
-     padding-bottom: 80px;
+     padding: 0;
      text-align: center;
      width: 100%;
      height: auto;
    }
-
-   body::before {
-    background: repeating-linear-gradient(
-      transparent,
-      transparent 2em,
-      rgba(45,25,25,0.3) 2em,
-      rgba(45,25,25,0.3) 2.5em,
-      transparent 2.5em,
-      transparent 4.5em,
-      rgba(45,25,25,0.3) 4.5em,
-      rgba(45,25,25,0.3) 6.5em,
-      transparent 6.5em,
-      transparent 7em,
-      rgba(45,25,25,0.3) 7em,
-      rgba(45,25,25,0.3) 9em
-      );
-    content: '';
-    bottom: 0;
-    top: 0;
-    left: 0;
-    right: 0;
-    position: absolute;
-    z-index: -1;
-  }
-  body::after {
-    background: repeating-linear-gradient( 90deg,
-      transparent,
-      transparent 2em,
-      rgba(45,25,25,0.3) 2em,
-      rgba(45,25,25,0.3) 2.5em,
-      transparent 2.5em,
-      transparent 4.5em,
-      rgba(45,25,25,0.3) 4.5em,
-      rgba(45,25,25,0.3) 6.5em,
-      transparent 6.5em,
-      transparent 7em,
-      rgba(45,25,25,0.3) 7em,
-      rgba(45,25,25,0.3) 9em
-      );
-    content: '';
-    bottom: 0;
-    top: 0;
-    left: 0;
-    right: 0;
-    position: absolute;
-    z-index: -1;
-  }
-
-  /*------fim back------*/
-
   body .base {
     background-color: white;
     border-radius: 10px;
@@ -101,9 +59,9 @@ flex-box, body {
   }
   body .base .aim {
     padding: 5%;
-    background-color: #ffc554;
+    background-color:#1f9bf5;
     height: 100%;
-    width: 40%;
+    width: 50%;
     position: absolute;
     top: 0;
     left: 0;
@@ -114,33 +72,33 @@ flex-box, body {
     justify-content: center;
   }
   body .base .aim h2, body .base .aim h6 {
-    color: white;
+    color: #FFFFFF;
   }
   body .base .aim .btn {
     border: 1px solid white;
-    background-color: #ffc554;
-    color: white;
+    background-color: #FFFFFF;
+    color: #1f9bf5;
   }
   body .base .aim.in {
-    left: 60%;
-    transition: all 800ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    left: 50%;
+    transition: all 800ms cubic-bezier(0.18, 0.89, 0.32, 1.28);
   }
   body .base .formArea {
     padding: 5%;
     background-color: white;
     height: 100%;
-    width: 60%;
+    width: 50%;
     position: absolute;
     top: 0;
-    left: 40%;
-    transition: all 800ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    left: 50%;
+    transition: all 800ms cubic-bezier(0.18, 0.89, 0.32, 1.28);
     z-index: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
   }
-  body .base .formArea .btn {
-    background-color: #395284;
+  body, select, .base, .formArea, .btn {
+    background-color: #1f9bf5;
     color: white;
   }
   body .base .formArea .btn:focus {
@@ -148,13 +106,14 @@ flex-box, body {
     box-shadow: none;
   }
   body .base .formArea input {
+    text-transform: capitalize;
     font-size: 1.5vw;
     font-family: "PT Serif", serif;
     background-color: white;
     color: #395284;
     border: none;
     border-radius: 0;
-    border-bottom: 1px solid #395284;
+    border-bottom: 1px solid #1f9bf5;
   }
   body .base .formArea input:focus {
     outline: none;
@@ -164,9 +123,22 @@ flex-box, body {
     color: #395284;
   }
   body .base .formArea h2, body .base .formArea h6 {
-    color: #395284;
+    color: #1f9bf5;
   }
   body .base .formArea.in {
     transition: all 800ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
-    left: 0%;
+    left: 0;
   }
+  select{
+    height: 30px;
+    width: 100%;
+    border-color: #1f9bf5;
+    margin-top: 10px;
+    font-size: 1.5vw;
+    font-family: "PT Serif", serif;
+    padding-left: 10px;
+    user-select: none;
+    cursor: pointer;
+  }
+  .direita{    float: right; padding-left: 10px;width: 50%;} .esquerda{ float: left; padding-right: 10px; width: 50%;}
+  .divgrade{flex-direction: row;}
