--- a/css/estilo.css
+++ b/css/estilo.css
@@ -9,12 +9,13 @@ Estilo principal
 html{
   font-size: 70%;
 }
-html * {
+html, * {
    margin: 0;
   padding: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
+    display: flex;
 }
 
 *, *:after, *:before {
@@ -24,7 +25,7 @@ html * {
 }
 
 body {
-  background: #395284;
+  background-image: linear-gradient(to top, rgb(58, 213, 255) 0%, rgb(0, 91, 234) 100%);
   font-family: "Audiowide", cursive;
   font-size: 100%;
   color: #31353d;
@@ -277,14 +278,6 @@ font-size: 18px;
       height: auto;
 
     }
-
-    /*-----------
-
-
-    --------------*/
-    /* Column container */
-    
-
     .row {  
       background: #fff;
       color: #aaa;
@@ -341,6 +334,74 @@ font-size: 18px;
         width: 100%;
       }
     }
+    #dvmainperfil{
+        padding-left: 200px;
+        padding-right: 200px;
+        height: 100%;
+        width: 100%;
+        background: none;
+        flex-direction: column;
+        justify-content: center;
+        display: block;
+        overflow: scroll;
+    }
+    #painel{
+        width: 100%;
+        height: 65%;
+        flex-direction: column;
+        background: none;
+        border: solid 1px #0d77ef;
+    }
+    #dvimgfundo{
+        position: relative;
+        width: 100%;
+        height: 100%;
+        background-image: url("../img/montanhas.jpg");
+        background-size: 100% 100%;
+        flex-direction: row;
+    }
+    #div-img-perfil{
+        position: absolute;
+        top: 54%;
+        left: 3%;
+        background: none;
+        float: left;
+        width: 30%;
+        height: 40%;
+        border: 0;
+        border-radius: 0;
+        display: block;
+    }
+    #dvfor-btn{
+        top: 86%;
+        width: 100%;
+        height: 14%;
+        position: relative;
+        background: #fdf6ff;
+    }
+#dvimgfundo, #dvfor-btn, #painel{
+        border-radius:  0 0 5px 5px;
+    }
+#dvprod{
+        margin-top: 10px;
+        width: 100%;
+        height: 1080px;
+        position: relative;
+        background: #1f9bf5;
+        border: solid 1px #0d77ef;
+        border-radius: 5px 5px 0 0;
+    }
+#foto-perfil{
+        transition: 1s;
+        border-radius: 50%;
+        height: 170px;
+        width: 170px;
+        background-size: 100% 100%;
+        border: solid 2px #FFFFFF;
+    }
+#foto-perfil:hover{
+    box-shadow: 0 3px 20px 5px rgb(14, 14, 15);
+}
 
 
 
