--- a/login/css/style.css
+++ b/login/css/style.css
@@ -10,13 +10,13 @@ html{
 /*-------------
     Background-body
     ---------------*/
-  header{
+  #hdrlogcad{
     position: relative;
     width: 100%;
     height: 70px;
     background: none;
   }
-    body {
+    body, #bdperfil {
      background-image: linear-gradient(to top, rgb(58, 213, 255) 0%, rgb(0, 91, 234) 100%);
      display: flex;
      flex-direction: column;
@@ -27,7 +27,7 @@ html{
      padding: 0;
      text-align: center;
      width: 100%;
-     height: auto;
+     height: 100%;
    }
   body .base {
     background-color: white;
