--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,51 +1,112 @@
 @import url('https://fonts.googleapis.com/css?family=Audiowide|Orbitron|Press+Start+2P');
 
-/* -------------------------------- 
-
-
-Estilo principal
-
--------------------------------- */
 html{
   font-size: 70%;
 }
-html, * {
-   margin: 0;
-  padding: 0;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  box-sizing: border-box;
-    display: block;
+html * {
+ margin: 0;
+ padding: 0;
+ -webkit-font-smoothing: antialiased;
+ -moz-osx-font-smoothing: grayscale;
+ box-sizing: border-box;
 }
 
-*, *:after, *:before {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
 
 body {
-  background-image: linear-gradient(to top, rgb(58, 213, 255) 0%, rgb(0, 91, 234) 100%);
-  font-family: "Audiowide", cursive;
+  background: #395284;
+  font-family: "Audiowide";
   font-size: 100%;
   color: #31353d;
+
+}
+header {
+ position: relative;
+ text-align: center;
+ padding-top: 110px;
+ padding-bottom: 60px;
+ background: #ffc554 fixed;
+ background-size: cover;
+ width: 100%;
+ height: auto;
+ box-shadow: 0px 0px 10px rgba(0,0,0,1);
+}
+
+nav {
+  font-size: 16px;
+  box-shadow: 0px 0px 10px rgba(0,0,0,1);
+  background: #31353d;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 85px;
+  padding: 10px 35px;
+  box-sizing: border-box;
+  z-index: 999;
+}
+
+
+
+nav .logo {
+  padding: 8px 0;
   
+  float: left;
 }
 
-a {
-  color: #435779;
+
+nav ul {
+
+  list-style: none;
+  float: right;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+nav ul li{
+  list-style: none;
+}
+
+nav ul li a{
+  line-height: 65px;
+  color: #fff;
+  padding: 12px 30px;
   text-decoration: none;
+  margin-right: 10px;
 }
 
-/*img {
-  max-width: 100%;
-}*/
 
+nav ul li a:focus{
+  outline: none;
+}
+
+.active{
+ background: #395284;
+ color: #fff;
+ border-radius: 6px;
+  box-shadow: 0px 0px 10px rgba(0,0,0,1);
+}
+.active:hover{
+  color: #31353d;
+  border-radius: 6px;
+   transition: color 0.1s linear 0s;
+}
+.color:hover
+{
+    color: #31353d;
+  background: #ffc554;
+  border-radius: 6px;
+   transition: color 0.1s linear 0s;
+    box-shadow: 0px 0px 10px rgba(0,0,0,1);
+}
+
+
+/*----fimheader*/
 h1#Home {
   color: #fff;
   background-color: #31353d;
   font-size: 25px;
-  margin-top: 0;
+  margin-top: 0px;
   text-align: center;
 }
 
@@ -53,360 +114,146 @@ h1#Home {
   text-align: center;
   border-bottom: 2px solid black;
 }
-/*Efeito Hover Cool Link*/
-.cool-link::after {
-  content: '';
-  display: block;
-  width: 0;
-  height: 2px;
+
+/* Column container */
+
+
+.Interface {  
   background: #fff;
-  transition: width 1s;
+  color: #aaa;
+  width: 1200px;
+  max-width: 90%;
+  margin: 5.5% auto;
+  margin-top: -1%;
+  padding: 4%;
+  border-radius: 6px;
+  padding-top: 1%;
+  padding-bottom: 1%;
+  box-shadow: 0px 0px 10px rgba(0,0,0,1);
 }
-.cool-link:hover::after {
+
+
+/* Main column */
+.main-conteudo { 
+  color: #fff;
+  margin: 4% auto;
+  font-size: 18px;
+  border-radius: 6px;
+  -ms-flex: 70%; /* IE10 */
+  flex: 70%;
+  background-color: #ffc554;
+  padding: 30px;
+  box-shadow: 0px 0px 10px rgba(0,0,0,1); 
+}
+
+/* Fake imagem, just for this example */
+.fakeimg {
+  background-color: grey;
   width: 100%;
-  transition: width 1s;
+  padding: 20px;
 }
 
-
-/* -------------------------------- 
-
-Módulos - partes reutilizáveis ​​do nosso design
-
--------------------------------- */
-.cd-container {
-  /* 
-  essa classe é usada para alinhar horizontalmente a galeria de itens */
-  position: relative;
-  width: 90%;
-  max-width: 1200px;
-  margin: 0 auto;
-}
-.cd-container::after {
-  /* clearfix */
-  content: '';
-  display: table;
-  clear: both;
-}
-
-.cd-img-replace {
-  /* substituir texto por uma imagem de plano de fundo*/
-  display: inline-block;
-  overflow: hidden;
-  text-indent: 100%;
-  white-space: nowrap;
-}
-
-/* -------------------------------- 
-
-xheader 
-
--------------------------------- */
-header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 50px;
-  width: 100%;
+/* Footer */
+.footer {
+  border-radius: 2px;
+  font-size: 20px;
+  color: white;
   background: #31353d;
+  padding: 90px;
   text-align: center;
-  box-shadow: 0 2px 0 rgba(0, 0, 0, 0.1);
-  z-index: 4;
-}
-@media only screen and (min-width: 1200px) {
-  header {
-    height: 80px;
-  }
+   box-shadow: 0px 0px 10px rgba(0,0,0,1);
+
 }
 
-#logo {
-  padding-top: 5px;
-  /* exclua essa propriedade se você não quiser que seu logotipo seja reduzido em dispositivos móveis*/
-  -webkit-transform: scale(0.8);
-  -moz-transform: scale(0.8);
-  -ms-transform: scale(0.8);
-  -o-transform: scale(0.8);
-  transform: scale(0.8);
-}
-@media only screen and (min-width: 1200px) {
-  #logo {
-    padding-top: 17px;
-    position: absolute;
-    /* margem esquerda do logotipo no Dekstop */
-    left: 1.4em;
-    top: 0;
-    -webkit-transform: scale(1);
-    -moz-transform: scale(1);
-    -ms-transform: scale(1);
-    -o-transform: scale(1);
-    transform: scale(1);
-  }
+
+
+/* teste botao roupa */
+
+.button {
+ font-size: 100% center;
+ margin-left: 47%;
+ background: #4d6b61;
+ border: 0;
+ border-radius: 50%;
+ box-shadow: inset -0.125rem -0.25rem rgba(0,0,0,0.2),
+ inset 0.125rem 0.25rem rgba(255,255,255,0.2),
+ 0.125rem 0.25rem 0.25rem rgba(0,0,0,0.35);
+ color: #4d6b61;
+ display: inline-block;
+ letter-spacing: 0.38em;
+ text-transform: uppercase;
+ text-decoration: none;
+ text-shadow: 1px 1px 1px rgba(0,0,0,.6), -1px -1px 1px rgba(255,255,255,0.4);
+ height: 8rem;
+ width: 8rem;
+ position: relative;
+ z-index: 1;
 }
 
-#cd-hamburger-menu {
+.button::before {
+  content: '';
+  border-radius: 50%;
+  box-shadow: inset -0.0625rem -0.125rem rgba(255,255,255,0.2),
+  inset 0.0625rem 0.125rem rgba(0,0,0,0.2);
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+  height: 6rem;
+  width: 6rem;
+}
+
+.button::after {
+  content: '';
+  border-radius: 50%;
+  box-shadow: 2.45rem 2.45rem #462227,
+  2.45rem 4.45rem #462227,
+  4.45rem 2.45rem #462227,
+  4.45rem 4.45rem #462227,
+  2.55rem 2.55rem rgba(255,255,255,0.2),
+  2.55rem 4.55rem rgba(255,255,255,0.2),
+  4.55rem 2.55rem rgba(255,255,255,0.2),
+  4.55rem 4.55rem rgba(255,255,255,0.2),
+  2.35rem 2.35rem rgba(0,0,0,0.2),
+  2.35rem 4.35rem rgba(0,0,0,0.2),
+  4.35rem 2.35rem rgba(0,0,0,0.2),
+  4.35rem 4.35rem rgba(0,0,0,0.2);
   position: absolute;
   top: 0;
-  height: 100%;
-}
-#cd-hamburger-menu a{
-  width: 60px;
-  height: 100%;
-}
-
-#cd-hamburger-menu {
   left: 0;
-}
-#cd-hamburger-menu a {
-  background: #26292f url("../img/cd-hamburger-menu.svg") no-repeat center center;
-}
-@media only screen and (min-width: 1200px) {
-  #cd-hamburger-menu {
-    display: none;
-  }
+  height: 1rem;
+  width: 1rem;
 }
 
-#main-nav{
-  position: fixed;
-  top: 0;
-  height: 100%;
-  width: 260px;
-  /* altura do cabeçalho */
-  padding-top: 50px;
-  overflow-y: auto;
-  -webkit-overflow-scrolling: touch;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-  z-index: 3;
-}
-@media only screen and (min-width: 768px) {
-  #main-nav{
-    width: 350px;
-  }
-}
-@media only screen and (min-width: 1200px) {
-  #main-nav{
-    width: 30%;
-    /* a altura do cabeçalho muda*/
-    padding-top: 80px;
-  }
+.button:focus {
+  background: #56796d;
+  outline:0;
 }
 
-#main-nav {
-  left: -100%;
-  background: #FFF;
-  -webkit-transition: left 0.3s;
-  -moz-transition: left 0.3s;
-  transition: left 0.3s;
-}
-#main-nav.speed-in {
-  left: 0;
-}
-#main-nav ul a {
-font-size: 18px;
- font-family: 'Audiowide', cursive;
- display: block;
- height: 50px;
- line-height: 50px;
- padding: 0 1em;
- 
-}
-#main-nav ul .current {
-  box-shadow: inset 3px 0 #435779;
+.button:active {
+  transform: scale(0.98,0.98);
 }
 
-/*navbar*/
-@media only screen and (min-width: 1200px) {
-  #main-nav {
-    /* redefinir o estilo de navegação principal */
-    position: absolute;
-    height: auto;
-    width: auto;
-    left: 0;
-    right: 0;
-    /*left: auto;
-    right: 1em;*/
-    padding-top: 0;
-    top: 0;
-    background: transparent;
-    box-shadow: none;
-    /*altura do cabeçalho */
-    line-height: 80px;
-    z-index: 4;
-  }
-  #main-nav li {
-    display: inline-block;
-    /*margin-left: 1em;*/
-    margin-left: 0;
-  }
-  #main-nav ul a {
-    display: inline-block;
-    height: auto;
-    line-height: 1;
-    padding: 1em 1.4em;
-    border-bottom: none;
-    color: rgba(255, 255, 255, 0.8);
-    border-radius: 0.25em;
-  }
-  #main-nav ul a.current {
-    box-shadow: none;
-    background: #435779;
-    color: #FFF;
-  }
-  .no-touch #main-nav ul a:hover {
-    background: #395284;
-    color: #FFF;
-    transition: 1.5s;
-
-  }
-}
-.no-js #main-nav {
-  position: fixed;
-}
-
-
-/*-------------
-    Background-header
-    ---------------*/
-
-    .background {
-      position: relative;
-      padding-top: 110px;
-      padding-bottom: 60px;
-      text-align: center;
-      /*background: url(../img/back.jpg) bottom;*/
-      background-size: cover;
-      background: #ff852b no-repeat fixed bottom;
-      width: 100%;
-      height: auto;
-
-    }
-    .row {  
-      background: #fff;
-      color: #aaa;
-      width: 1100px;
-      max-width: 90%;
-      margin: 5% auto;
-      border-radius: 6px;
-      padding: 1% 4%;
-
-    }
-
-    
-    /* Main column */
-    .main-conteudo { 
-      color: #fff;
-      margin: 4% auto;
-      font-size: 18px;
-     border-radius: 6px;
-      -ms-flex: 70%; /* IE10 */
-      flex: 70%;
-      background-color: #ffc554;
-      padding: 30px;
-    }
-
-    /* Fake image, just for this example */
-    .fakeimg {
-      background-color: grey;
-      width: 100%;
-      padding: 20px;
-    }
-
-    /* Footer */
-    .footer {
-      font-size: 20px;
-      color: white;
-      background: #31353d;
-      padding: 90px;
-      text-align: center;
-      
-    }
-
-
-    /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
-    @media screen and (max-width: 700px) {
-      .row {   
-        flex-direction: column;
-      }
-    }
-
-    /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
-    @media screen and (max-width: 400px) {
-      .navbar a {
-        float: none;
-        width: 100%;
-      }
-    }
-    #dvmainperfil{
-        padding-left: 200px;
-        padding-right: 200px;
-        height: 100%;
-        width: 100%;
-        background: none;
-        flex-direction: column;
-        justify-content: center;
-        display: block;
-        overflow: scroll;
-    }
-    #painel{
-        width: 100%;
-        height: 65%;
-        flex-direction: column;
-        background: none;
-        border: solid 1px #0d77ef;
-    }
-    #dvimgfundo{
-        position: relative;
-        width: 100%;
-        height: 100%;
-        background-image: url("../img/montanhas.jpg");
-        background-size: 100% 100%;
-        flex-direction: row;
-    }
-    #div-img-perfil{
-        position: absolute;
-        top: 54%;
-        left: 3%;
-        background: none;
-        float: left;
-        width: 30%;
-        height: 40%;
-        border: 0;
-        border-radius: 0;
-        display: block;
-    }
-    #dvfor-btn{
-        top: 86%;
-        width: 100%;
-        height: 14%;
-        position: relative;
-        background: #fdf6ff;
-    }
-#dvimgfundo, #dvfor-btn, #painel{
-        border-radius:  0 0 5px 5px;
-    }
-#dvprod{
-        margin-top: 10px;
-        width: 100%;
-        height: 1080px;
-        position: relative;
-        background: #1f9bf5;
-        border: solid 1px #0d77ef;
-        border-radius: 5px 5px 0 0;
-    }
-#foto-perfil{
-        transition: 1s;
-        border-radius: 50%;
-        height: 170px;
-        width: 170px;
-        background-size: 100% 100%;
-        border: solid 2px #FFFFFF;
-    }
-#foto-perfil:hover{
-    box-shadow: 0 3px 20px 5px rgb(14, 14, 15);
-}
-ul,ol{
+/*parallax*/
+.section{
+  position: relative;
 
 }
+#second .caption{
+  top: 150px;
+  right: 100px;
+} 
 
-
-
-
-
+#second{
+  background: url(../imgpara/second.jpg) 50% 0 no-repeat fixed;
+  color: white;
+  height: 1000px;
+  margin: 0 auto;
+  overflow: hidden;
+  padding: 0;
+  z-index: -1;
+}
+.shoe{
+  background: url(../imgpara/third.png) 50% 0 no-repeat fixed;
+  height: 1000px;
+  z-index: -1;
+}
